Style changes to thank you and user form.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,13 +12,13 @@
  */
 
  @import "bootstrap";
-
  @import "font-awesome-sprockets";
-
  @import "font-awesome";
-
+ @import "bootstrap-social";
  @import 'make_it_easy';
-
  @import 'review';
+ @import 'thank_you';
+ @import 'campaigns_chunk';
+ @import 'user_fields';
 
 
