--- a/app/views/application/sign.html.haml
+++ b/app/views/application/sign.html.haml
@@ -5,11 +5,9 @@
         %div.col-lg-12
           %div#directions
             %h1#encouragement
-              You're almost done!
+              Uh oh! That didn't work.
             %h5#ps
-              (But feel free to
-              = link_to("go back", homepage_path, {id: 'sign-more', method: :get})
-              and sign some more.)
+              (Don't worry! Just try again.)
 
 
   = render partial: 'signing_panel'
