--- a/app/views/application/_results.html.haml
+++ b/app/views/application/_results.html.haml
@@ -4,9 +4,10 @@
 - if !other_campaigns.empty?
   %div.results-header
     %p
-      = "#{campaigns.count} campaign#{'s' if campaigns.count != 1} matched"
+      = "#{campaigns.count} campaign#{'s' if campaigns.count != 1} matched:"
+      %br
       %span.search-term
-        = "#{@search_term}:"
+        = "'#{@search_term}'"
 
 %div{class: "row campaign-list #{'matching' if !other_campaigns.empty?}"}
   = render partial: 'application/campaign', collection: campaigns.sort{|x,y| x.name.length <=> y.name.length}, cached: -> campaign { [ campaign, campaigns_already_signed.include?(campaign.id), selected_campaigns.include?(campaign.id) ] }
