--- a/app/views/application/make_it_easy.html.haml
+++ b/app/views/application/make_it_easy.html.haml
@@ -1,5 +1,6 @@
 - campaigns_already_signed = @campaigns_already_signed || []
 - selected_campaigns       = @selected_campaigns || []
+- have_selected_campaigns  = @selected_campaigns.present?
 
 %main
 
@@ -55,11 +56,11 @@
 
 
 
-  - have_selected_campaigns = @selected_campaigns.present?
   %div.sticky-footer.sign-petitions{class: "#{'retracted' if !have_selected_campaigns}"}
     = form_tag('/review', method: 'POST') do
       %input#petition-data{type: 'hidden', name:'campaigns[selected]'}
       %input#unsigned-campaign-ids{type: 'hidden', value: @all_active_campaigns.collect(&:id).sort}
+      %input#search-terms{type: 'hidden', value: '[]'}
       %div.footer-text
         Sign
         - num_selected_campaigns = (@selected_campaigns || []).count
@@ -71,7 +72,7 @@
         %div.notification
           Campaign added!
 
-  %div.static-footer
+  %div{'class' => "static-footer #{'with-padding' if have_selected_campaigns}"  }
     %p
       © Brian Howald 2017
     %div.social-media-links
