--- a/app/views/application/_results.html.haml
+++ b/app/views/application/_results.html.haml
@@ -1,7 +1,7 @@
 - campaigns_already_signed = @campaigns_already_signed || []
 - selected_campaigns       = @selected_campaigns || []
 
-- if !other_campaigns.empty?
+- if @search_term.present?
   %div.results-header
     %p
       = "#{campaigns.count} campaign#{'s' if campaigns.count != 1} matched:"
